# registry

./: Cargo.toml  README.md
.github/workflows/: backend.yml  frontend.yml  tracker-publish.yml  tracker.yml
backend/: .env.example  Cargo.toml
backend/examples/: render_svg.rs
backend/src/: ast_to_svg.rs  cache.rs  db.rs  lib.rs  main.rs  oci.rs  og_card.rs
backend/src/schema/: mod.rs
backend/src/schema/match_query/: cursor.rs  mod.rs  query.rs
backend/src/schema/pagination/: mod.rs
backend/src/schema/protocol/: mod.rs  query.rs
backend/tests/: db_matches.rs  graphql_protocol_match.rs  graphql_protocol_matches.rs
bootstrap/backend/: deployment.tf  main.tf
bootstrap/frontend/: deployment.tf
bootstrap/postgres/: main.tf  monitor.tf  output.tf  postgres.tf
bootstrap/tracker/: configmap.tf  deployment.tf  main.tf  tracker.toml.tpl
data/: data.json
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.tracker
docs/superpowers/plans/: 2026-05-11-tracker-daemon.md  2026-05-13-tracker-oci-discovery.md  2026-05-14-activity-postgres.md  2026-05-15-activity-detail-header-actions.md  2026-05-15-bootstrap-tracker-postgres.md  2026-06-18-tracker-anchor-gate-matching.md
docs/superpowers/specs/: 2026-05-11-tracker-daemon-design.md  2026-05-13-tracker-oci-discovery-design.md  2026-05-14-activity-postgres-design.md  2026-05-15-activity-detail-header-actions-design.md  2026-05-15-bootstrap-tracker-postgres-design.md  2026-06-18-tracker-anchor-gate-matching-design.md
frontend/: .env.example  .npmrc  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema.graphql  tailwind.config.ts  vite-env.d.ts  vite.config.ts
frontend/@types/: graphql.d.ts
frontend/app/: app.css  root.tsx  trp-config.ts
frontend/app/components/: EmptyState.tsx  Footer.tsx  Header.tsx  Hero.tsx  ProtocolLogo.tsx  SearchBar.tsx  TabName.tsx  ToTopButton.tsx
frontend/app/gql/: matches.query.ts  protocols.query.ts
frontend/app/hooks/: useFetcherPolling.ts
frontend/app/routes/: _index.tsx  api.protocols.$scope.$name.logo.tsx  api.protocols.$scope.$name.matches.$txHash.tsx  api.protocols.$scope.$name.matches.tsx  api.protocols.$scope.$name.og[.png].tsx  api.search.tsx  protocol.$scope.$name.tsx  protocol.tsx  protocols.tsx  (+1 more)
tracker/: .gitignore  Cargo.toml  tracker.toml.example
tracker/examples/orcfax-burn/: README.md  run.sh  tracker.toml  trix.toml
tracker/migrations/: 20260511000001_initial.sql  20260514120000_add_repo_columns.sql
tracker/src/: config.rs  discovery.rs  error.rs  lib.rs  main.rs  process.rs  specialization.rs  store.rs
tracker/tests/: cursor_persistence.rs  discovery.rs  gating_real_txs.rs  migration_repo_columns.rs  over_matching_regression.rs  source_anchors.rs  store_idempotency.rs  store_repo_columns.rs
tracker/tests/fixtures/: orcfax_burn.tii  orcfax_burn_anchored.tii  orcfax_burn_anchorless.tii
tracker/tests/fixtures/protocols/: bodega_market.tii  fluid-aquarium.tii  indigo.tii  strike-staking.tii  vyfi.tii
zot/: README.md  config.json  docker-compose.amd.yml  docker-compose.arm.yml
zot/seed/: Cargo.toml  main.rs
(+75 files in other folders)
