[package]
name = "tx3-registry-backend"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tx3-lang/registry"
homepage = "https://registry.telchar.txpipe.io"
documentation = "https://telchar.txpipe.io"

[dependencies]
async-graphql = "7.0.17"
async-graphql-rocket = "7.0.17"
base64 = "0.22"
chrono = "0.4.39"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros", "migrate"] }
hex = "0.4.3"
oci-client = "0.14.0"
reqwest = { version = "0.12.12", features = ["json"] }
resvg = "0.45"
rocket = "0.5.1"
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tx3-lang = "0.17.0"
tx3-tir = "0.17.0"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
